--- a/app/css/tailwind-output.css
+++ b/app/css/tailwind-output.css
@@ -1,6 +1,6 @@
-/* npx tailwindcss -i ./app/css/tailwind-input.css -o ./app/css/tailwind-output.css --watch */
-
-/* ! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com */
+/*
+! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
+*/
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
