--- a/app/css/tailwind-input.css
+++ b/app/css/tailwind-input.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.card {
+    @apply bg-white rounded overflow-hidden shadow-md relative cursor-pointer hover:shadow-lg;
+}
+
+.budge {
+    @apply bg-secondary-100 text-secondary-200 text-xs font-bold rounded-full p-2 absolute top-0 m-2;
+}
+
+.btn {
+    @apply rounded-full py-2 px-4 uppercase text-xs font-bold cursor-pointer tracking-wide;
+}
